<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_display"
        android:textSize="36sp"
        android:background="@color/black"
        android:padding="20dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="16dp"
            android:id="@+id/btnSiete"
            android:text="@string/boton_7">
        </Button>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="16dp"
            android:id="@+id/btnOcho"
            android:text="@string/boton_8">
        </Button>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="16dp"
            android:id="@+id/btnNueve"
            android:text="@string/boton_9">
        </Button>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="16dp"
            android:textSize="32sp"
            android:id="@+id/btnMas"
            android:text="@string/boton_mas">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="16dp"
            android:id="@+id/btnCuatro"
            android:text="@string/boton_4">
        </Button>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="16dp"
            android:id="@+id/btnCinco"
            android:text="@string/boton_5">
        </Button>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="16dp"
            android:id="@+id/btnSeis"
            android:text="@string/boton_6">
        </Button>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="16dp"
            android:id="@+id/btnMenos"
            android:text="@string/boton_menos">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="16dp"
            android:id="@+id/btnUno"
            android:text="@string/boton_1">
        </Button>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="16dp"
            android:id="@+id/btnDos"
            android:text="@string/boton_2">
        </Button>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="16dp"
            android:id="@+id/btnTres"
            android:text="@string/boton_3">
        </Button>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="16dp"
            android:id="@+id/btnDivision"
            android:text="@string/boton_division">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="16dp"
            android:id="@+id/btnCero"
            android:text="@string/boton_0">
        </Button>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="16dp"
            android:id="@+id/btnPunto"
            android:text="@string/boton_punto">
        </Button>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="16dp"
            android:id="@+id/btnIgual"
            android:background="@color/verde"
            android:text="@string/boton_igual">
        </Button>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="16dp"
            android:id="@+id/btnMultiplicacion"
            android:text="@string/boton_multiplicacion">
        </Button>
    </LinearLayout>

</LinearLayout>